--- a/public/src/style.css
+++ b/public/src/style.css
@@ -183,7 +183,7 @@ div#slider figure {
     text-align: center;
 }
 .textFeature {
-   width: 33vh;
+   width: 45vh;
 }
 .rowFeatures{
     display: block;
@@ -226,7 +226,132 @@ div#slider figure {
 .center-text {
     text-align: center;
 }
+@import url(https://fonts.googleapis.com/css?family=Montserrat:500);
+.container {
+	max-width: 100rem;
+	margin: 0 auto;
+	padding: 0 2rem 2rem;
+}
+.heading {
+	font-family: "Montserrat", Arial, sans-serif;
+	font-size: 4rem;
+	font-weight: 500;
+	line-height: 1.5;
+	text-align: center;
+	padding: 3.5rem 0;
+	color: #1a1a1a;
+}
 
+.heading span {
+	display: block;
+}
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	margin: -1rem -1rem;
+}
+
+.gallery-item {
+	flex: 1 0 24rem;
+	margin: 1rem;
+	box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+	overflow: hidden;
+}
+
+.gallery-image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	transition: transform 400ms ease-out;
+}
+.gallery-image:hover {
+	transform: scale(1.15);
+}
+@supports (display: grid) {
+	.gallery {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(18rem, 0.7fr));
+		grid-gap: 1rem;
+	}
+	.gallery,
+	.gallery-item {
+		margin: 0;
+	}
+}
+.ourTeam {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .cf:before,
+  .cf:after {
+      content: " ";
+      display: table; 
+  }
+  .cf:after {
+      clear: both;
+  }
+  .cf {
+      *zoom: 1;
+  }
+  .team-container {
+    max-width: 1000px;
+    margin: auto;
+    border-top: 1px #e9e9e9 solid;
+    border-bottom: 1px #e9e9e9 solid;
+    padding-top: 5em;
+    padding-bottom: 5em;
+    margin-top: 3em;
+    position: relative;
+  }
+  .team-member {
+    width: 16%;
+    float: left;
+    text-align: center;
+    margin-right: 25%;
+  }
+  .team-member:last-child {margin-right: 0;}
+  .team-member span,
+  .team-member h3 {
+    max-width: 200px;
+    font-family: sans-serif;
+    letter-spacing: -1px;
+  }
+  .team-member h3 {
+    color: #1CA3A3;
+  }
+  .email {
+    color: #EA2678;
+  }
+  .team-member span {
+    display: block;
+   
+  }
+  .team-photo {
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    max-width: 100%;
+    height: auto;
+    transition: 0.1s transform ease-in-out;
+  }
+  .team-photo:hover {
+    transform: scale(0.9);
+    cursor: pointer;
+  }
+  @media (max-width:650px){
+    .team-member {
+      width:20%;
+      margin-left: 4%;
+      margin-right: 4%;
+      margin-bottom: 40px;
+    }
+    .team-photo {
+        max-width: 35%;
+      }
+  }
 @media only screen and (max-width: 1100px) {
     .row1{
         display: flex;
@@ -254,6 +379,16 @@ div#slider figure {
     }
     .features{
         width: calc(100% / 2);
+    }
+    .iconFeature i{
+        margin-top: 10px;
+        width: 135px;
+        height: 135px;
+        line-height: 50px;
+        border-radius: 50%;
+        text-align: center;
+        border: 2px solid #fff;
+        font-size: 1.38rem;
     }
   }
   @media only screen and (max-width: 940px) {
@@ -396,3 +531,23 @@ div#slider figure {
      }
 
 }
+@media (max-width:650px){
+    .team-member {
+      float: none;
+      display: block;
+      margin: 50px auto;
+      width: 100%;
+      text-align: center;
+    }
+    
+    .team-member h3,
+    .team-member span {
+      margin: 15px auto;
+    }
+    @supports (display: grid) {
+        .gallery,
+        .gallery-item {
+            margin-left: 10%;
+        }
+    }
+  }
